force-app/main/default/objects/SFDC_Timecard__c/SFDC_Timecard__c.object-meta.xml
<CustomObject>
    <description>Timecards are submitted by Resources for completed work.</description>
    <label>Timecard</label>
    <nameField>
        <displayFormat>Timecard {000}</displayFormat>
        <label>Timecard#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timecards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>