force-app/main/default/objects/SFDC_Timecard__c/fields/F_Notes__c.field-meta.xml
<CustomField>
    <fullName>F_Notes__c</fullName>
    <label>F Notes</label>
    <length>120</length>
    <type>Text</type>
</CustomField>