force-app/main/default/objects/SFDC_Timecard__c/fields/Fri__c.field-meta.xml
<CustomField>
    <fullName>Fri__c</fullName>
    <label>Fri</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>