force-app/main/default/objects/SFDC_Timecard__c/fields/H_Notes__c.field-meta.xml
<CustomField>
    <fullName>H_Notes__c</fullName>
    <label>Th Notes</label>
    <length>120</length>
    <type>Text</type>
</CustomField>