force-app/main/default/objects/SFDC_Timecard__c/fields/M_Notes__c.field-meta.xml
<CustomField>
    <fullName>M_Notes__c</fullName>
    <label>M Notes</label>
    <length>120</length>
    <type>Text</type>
</CustomField>