force-app/main/default/objects/SFDC_Timecard__c/fields/Mon__c.field-meta.xml
<CustomField>
    <fullName>Mon__c</fullName>
    <label>Mon</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>