force-app/main/default/objects/SFDC_Timecard__c/fields/Sa_Notes__c.field-meta.xml
<CustomField>
    <fullName>Sa_Notes__c</fullName>
    <label>Sa Notes</label>
    <length>120</length>
    <type>Text</type>
</CustomField>