force-app/main/default/objects/SFDC_Timecard__c/fields/Sat__c.field-meta.xml
<CustomField>
    <fullName>Sat__c</fullName>
    <label>Sat</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>