force-app/main/default/objects/SFDC_Timecard__c/fields/Su_Notes__c.field-meta.xml
<CustomField>
    <fullName>Su_Notes__c</fullName>
    <label>Su  Notes</label>
    <length>120</length>
    <type>Text</type>
</CustomField>