force-app/main/default/objects/SFDC_Timecard__c/fields/Sun__c.field-meta.xml
<CustomField>
    <fullName>Sun__c</fullName>
    <label>Sun</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>