force-app/main/default/objects/SFDC_Timecard__c/fields/T_Notes__c.field-meta.xml
<CustomField>
    <fullName>T_Notes__c</fullName>
    <label>T Notes</label>
    <length>120</length>
    <type>Text</type>
</CustomField>