force-app/main/default/objects/SFDC_Timecard__c/fields/Thu__c.field-meta.xml
<CustomField>
    <fullName>Thu__c</fullName>
    <label>Thu</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>