force-app/main/default/objects/SFDC_Timecard__c/fields/Tue__c.field-meta.xml
<CustomField>
    <fullName>Tue__c</fullName>
    <label>Tue</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>