force-app/main/default/objects/SFDC_Timecard__c/fields/W_Notes__c.field-meta.xml
<CustomField>
    <fullName>W_Notes__c</fullName>
    <label>W Notes</label>
    <length>120</length>
    <type>Text</type>
</CustomField>