force-app/main/default/objects/SFDC_Timecard__c/fields/Wed__c.field-meta.xml
<CustomField>
    <fullName>Wed__c</fullName>
    <label>Wed</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>