force-app/main/default/objects/SFDC_Timecard__c/listViews/NotSubmitted.listView-meta.xml
<ListView>
    <fullName>NotSubmitted</fullName>
    <columns>NAME</columns>
    <columns>Week_of__c</columns>
    <columns>Projects__c</columns>
    <columns>Resource__c</columns>
    <columns>Mon__c</columns>
    <columns>Tue__c</columns>
    <columns>Wed__c</columns>
    <columns>Thu__c</columns>
    <columns>Fri__c</columns>
    <columns>Submit__c</columns>
    <columns>Approve__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Submit__c</field>
        <operation>equals</operation>
    </filters>
    <label>Not Submitted</label>
</ListView>